--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -40,6 +43,21 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.14"
+    "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-essentials": "^8.4.2",
+    "@storybook/addon-interactions": "^8.4.2",
+    "@storybook/addon-onboarding": "^8.4.2",
+    "@storybook/blocks": "^8.4.2",
+    "@storybook/preset-create-react-app": "^8.4.2",
+    "@storybook/react": "^8.4.2",
+    "@storybook/react-webpack5": "^8.4.2",
+    "@storybook/test": "^8.4.2",
+    "autoprefixer": "^10.4.20",
+    "eslint-plugin-storybook": "^0.11.0",
+    "postcss": "^8.4.49",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.4.2",
+    "tailwindcss": "^3.4.14",
+    "webpack": "^5.96.1"
   }
 }
